v0.4.0-rc.1/CHANGELOG.md
# zcap-spec Change Log

## v0.4.0-draft

Non-normative (but normative adjacent)

* Clarify that a delegation `proof` requires a `capabilityChain`.
  refer to the value of `capabilityChain` as "capability ancestors array" instead of "capability delegation chain", to avoid ambiguity with the other way the spec uses "capability chain" referring to something else
  * This is considered a reasonably non-normative change, because it seems consistent with what prior zcap-spec versions intended based on examples 1 & 7.

Non-normative

* Fix examples of delegations `@context` to start with the required value `https://w3id.org/zcap/v1`.
  Previously, some values started with URLs to other contexts like `example.org`.

* add `capabilityChain` to delegation proofs in examples 3 & 4

* Fix example 1 `parentCapability` and `proof.capabilityChain` to identify the parent root capability by a URN.
  Before, the example text identified the parent capability using an HTTPS URL.
  After, example 1 conforms to the requirement that delegations identify root capabilities using a URN.
  * Pull Request: <https://github.com/w3c-ccg/zcap-spec/pull/66>

* Fix example 10 (Capability Invocation JSON) invocation `proof` to conform to the Invocation JSON `proof` requirements.
  Before, `proof.capability` was an HTTPS URL string identifying a delegated capability,
  and the proof omitted `invocationTarget` and `capabilityAction`.
  After, `proof.capability` expresses the full delegated zcap, as required when invoking a delegated capability using a DI proof,
  and the proof includes the required `invocationTarget` and `capabilityAction`.

* Rename the verification method used by example 1's capability delegation proof
  from `https://example.com/i/alice/keys/1` to `https://example.com/i/alyssa/keys/1`.
  The key belongs to Alyssa, so it did not make sense for its URL to name Alice.

* Add an example of the document that the target `https://whatacar.example/a-fancy-car` dereferences to,
  including its `capabilityDelegation` property value.
  Before, example 1's delegation proof was created with a verification method that the document never showed to be authorized by the car.
  After, the reader can follow the initial source of authority from the target's `capabilityDelegation` property to the key that signs the first delegation.

* Fix example 6 root capability `@context` value to be a string, as required. Previously it was an array.
  * Pull Request: <https://github.com/w3c-ccg/zcap-spec/pull/60>

* Fix respec warning "Document uses RFC2119 keywords but lacks a conformance section." by adding a minimal conformance section.
  * Pull Request: <https://github.com/w3c-ccg/zcap-spec/pull/59>

* Replaced all usage of RsaSignature2016 in examples with [DataIntegrityProof](https://www.w3.org/TR/vc-data-integrity/#dataintegrityproof),
  which use the property named proofValue (instead of the formerly used signatureValue) for the output of the algorithm used by the verification method.
  This makes the examples a better reflection of the kind of proofs described by the rest of the spec.

* Added contexts/zcap-v1.jsonld, a representation of the JSON-LD Context that the zcap-spec assumes is resolvable at <https://w3id.org/zcap/v1>, the location required in zcap JSON-LD `@context` property values.
